# agentic-commerce

./: .gitignore  README.md  mcp_client.py  onboard_merchant.py  payment.py  pyproject.toml
chat/: .env.example  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
chat/components/: app-sidebar.tsx  chat.tsx  mcp-tools-indicator.tsx  message.tsx  messages.tsx  multimodal-input.tsx  voice-button.tsx
chat/components/commerce/: cart-view.tsx  checkout-view.tsx  order-confirmation.tsx  product-card.tsx  product-grid.tsx
chat/components/elements/: tool.tsx
chat/hooks/: use-language.ts  use-voice-input.ts
chat/lib/: errors.ts  sarvam.ts
chat/lib/ai/: mcp.ts  models.ts  providers.ts
demo_data/: catalogue.csv
deploy/artisan-india/: discovery_profile.json
deploy/artisan-india/data/: catalogue.json  inventory.csv  products.csv  products.db  shipping_rates.csv  transactions.db
rest/python/client/flower_shop/: pyproject.toml
rest/python/server/: config.py  db.py  integration_test.py  pyproject.toml  server.py
rest/python/server/routes/: discovery.py  discovery_profile_india.json  products.py
rest/python/server/services/: checkout_service.py
sarvam/: .env.example  app.py  index.js  package-lock.json  package.json
sarvam/modules/: asr.js  asr.py  lid.js  lid.py  llm.py  translate.js  translate.py  tts.js  tts.py
web/: README.md
web/backend/: main.py
web/frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
web/frontend/src/: App.tsx
web/frontend/src/components/: FileDropZone.tsx  (+1 more)
(+3 files in other folders)
